writings: fix horizontal scroll

--- a/writings/new/index.css
+++ b/writings/new/index.css
@@ -4,6 +4,7 @@ body {
     background-color: #111;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 #view-modal {
